--- a/index.html
+++ b/index.html
@@ -585,13 +585,13 @@ In the world of technology, the phrase "Your hope, our trust" embodies the deep 
               <small>By
                 <span class="username">Product</span>
               </small>
-              | <small>07 Aug, 2018</small>
+              | <small>07 jun, 2025</small>
             </p>
             <h4 class="blog-title">
               <a href="#">Dell I5 12th genration 8GB
            Ram 512GB SSD Vostro Laptop....</a>
             </h4>
-            <p class="blog-summary">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="blog-summary">consectetur adipiscing elit, sed .</p>
             <a href="#" class="readmore-btn">
               <span>Read More</span>
             </a>
